--- a/TallerDeReparacionDeVehiculos/nbproject/project.properties
+++ b/TallerDeReparacionDeVehiculos/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/TallerDeReparacionDeVehiculos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Ernesto\\Programas\\Biblioteca\\hamcrest-core-1.3.jar
+file.reference.junit-4.11.jar=C:\\Ernesto\\Programas\\Biblioteca\\junit-4.11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
