--- a/TallerDeReparacionDeVehiculos/nbproject/project.properties
+++ b/TallerDeReparacionDeVehiculos/nbproject/project.properties
@@ -43,7 +43,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.11.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
