--- a/TallerDeReparacionDeVehiculos/nbproject/private/private.properties
+++ b/TallerDeReparacionDeVehiculos/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 file.reference.hamcrest-core-1.3.jar=D:\\UNIVERSIDAD\\Netbeans 8.0\\hamcrest-library-1.3.jar
 file.reference.junit-4.11.jar=D:\\UNIVERSIDAD\\Netbeans 8.0\\junit4.jar
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Ernesto\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
