--- a/TallerDeReparacionDeVehiculos/nbproject/project.properties
+++ b/TallerDeReparacionDeVehiculos/nbproject/project.properties
@@ -28,7 +28,9 @@ dist.jar=${dist.dir}/TallerDeReparacionDeVehiculos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.hamcrest-core-1.3.jar=C:\\Ernesto\\Programas\\Biblioteca\\hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-1=C:\\Ernesto\\Programas\\Biblioteca\\hamcrest-core-1.3.jar
 file.reference.junit-4.11.jar=C:\\Ernesto\\Programas\\Biblioteca\\junit-4.11.jar
+file.reference.junit-4.11.jar-1=C:\\Ernesto\\Programas\\Biblioteca\\junit-4.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +46,9 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.11.jar}
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar-1}:\
+    ${file.reference.junit-4.11.jar-1}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
