--- a/TallerDeReparacionDeVehiculos/nbproject/project.properties
+++ b/TallerDeReparacionDeVehiculos/nbproject/project.properties
@@ -32,8 +32,7 @@ file.reference.junit-4.11.jar=C:\\Ernesto\\Programas\\Biblioteca\\junit-4.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.11.jar}
+    ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
